# MIVI_FIRMWARE_ALARM

./: CMakeLists.txt  README.md  alarm.c  alarm.h  clock.c  clock.h  main.c  rtc.c  rtc.h  second.c  second.h  utc.c  utc.h  week.c  week.h  wristband.c
